# violet

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  violet.rs
src/control/: commands.rs  interpreter.rs  mod.rs
src/data/: mod.rs  pathtree.rs
src/io/: input.rs
src/util/: mod.rs  string.rs  treepath.rs
