[package]
    name = "violet"
    version = "0.1.0"
    authors = ["Oleksii Kshenskyi <oleksii.kshenskyi@outlook.com>"]
    edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
    name = "violet"
    path = "src/violet.rs"

[dependencies]
    enum_dispatch = "0.3.4"
    chrono = "0.4.19"